fix: Add Ral Nel; fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll;
+  background: url(../assets/background.jpg) no-repeat center center fixed;
+  background-size: cover;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
-  background: url(../assets/background.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
 
   color: white;
 
